--- a/app/app.css
+++ b/app/app.css
@@ -1,11 +1,19 @@
 body {
     padding: 0;
     margin: 0;
+    background-image: url("/resources/images/wallpaperflare.com_wallpaper.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .container-fluid {
     padding-left: 40px;
     padding-right: 40px;
+    color: white;
+}
+
+.container-fluid select, .container-fluid input {
+    color: black;
 }
 
 h1 {
