--- a/app/cinema-list/cinemas.css
+++ b/app/cinema-list/cinemas.css
@@ -1,3 +1,17 @@
+.cinemas-text {
+    color: white;
+}
+
+.cinemas-sort {
+    display: flex;
+    gap: 15px;
+    padding-top: 10px;
+}
+
+.cinemas-sort li {
+    font-size: 20px;
+}
+
 .cinemas li {
     height: max-content;
     padding-top: 15px;
@@ -9,7 +23,7 @@
 .cinemas {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    }
+}
 
 .cinema-name {
     font-size: 25px;
