--- a/app/movie-detail/movie.css
+++ b/app/movie-detail/movie.css
@@ -5,7 +5,7 @@
 }
 
 .movie-stats li + li {
-    border-left: 1px solid #000000
+    border-left: 1px solid white;
 }
 
 .movie-stats li {
@@ -15,7 +15,8 @@
 }
 
 .description {
-    padding-top: 30px;
+    padding-top: 10px;
+    font-size: 20px;
 }
 
 .movie-main-image {
@@ -24,6 +25,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    border: 2px solid #00eaff;
 }
 
 .genres {
@@ -37,9 +39,11 @@
 
 .genres li {
     border-radius: 4px;
-    border: 1px solid #000000;
     text-align: center;
     padding: 10px;
+    background-image: linear-gradient(270deg, #08AEEA 0%, #2AF598 100%);
+    color: black;
+    font-weight: bold;
 }
 
 .movie-thumbs {
@@ -56,6 +60,7 @@
     cursor: pointer;
     display: inline-block;
     margin: 1em;
+    border: 2px solid #00eaff;
 }
 
 span {
