--- a/app/my-page/my-page.css
+++ b/app/my-page/my-page.css
@@ -36,6 +36,7 @@
 .weather-stats {
     display: flex;
     justify-content: space-evenly;
+    padding-bottom: 10px;
 }
 
 .inner-stats {
@@ -43,4 +44,12 @@
     gap: 10px;
     flex-direction: column;
     align-items: center;
+}
+
+.my-orders-link {
+    background-image: linear-gradient(270deg, rgb(8,174,234), rgb(42,245,152));
+    color: white;
+    font-size: 17px;
+    margin-left: 10px;
+    padding: 5px 10px 5px 10px;
 }
