added remove ticket logic, taken seats logic, pay for order logic

--- a/app/ticket-picker/ticket-picker.css
+++ b/app/ticket-picker/ticket-picker.css
@@ -9,6 +9,12 @@
     color: white;
 }
 
+.taken-seat {
+    background-color: #4a4949;
+    pointer-events: none;
+    cursor: not-allowed;
+}
+
 .rows {
     padding-top: 20px;
 }
