--- a/app/signup/signup.css
+++ b/app/signup/signup.css
@@ -47,3 +47,9 @@
     display: block;
     text-align: center;
 }
+
+.select-city, .select-user-cat {
+    font-size: 15px;
+    width: 400px;
+    height: 30px;
+}
