--- a/app/app.css
+++ b/app/app.css
@@ -2,6 +2,7 @@ body {
     padding: 0;
     margin: 0;
     background-image: url("/resources/images/wallpaperflare.com_wallpaper_compressed.jpg");
+    background-repeat: no-repeat;
     background-size: cover;
 }
 
