--- a/app/my-page/my-page.css
+++ b/app/my-page/my-page.css
@@ -46,7 +46,7 @@
     align-items: center;
 }
 
-.my-orders-link, .logout {
+.my-orders-link, .logout, .admin-users-link {
     background-image: linear-gradient(270deg, rgb(8,174,234), rgb(42,245,152));
     color: white;
     font-size: 17px;
