--- a/app/my-page/my-page.css
+++ b/app/my-page/my-page.css
@@ -50,6 +50,23 @@
     background-image: linear-gradient(270deg, rgb(8,174,234), rgb(42,245,152));
     color: white;
     font-size: 17px;
-    margin-left: 10px;
     padding: 5px 10px 5px 10px;
+}
+
+.logout {
+    float: right;
+}
+
+.user-control-buttons {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    padding-top: 10px;
+}
+
+.small-li-button {
+    flex: 1;
+}
+.big-li-button {
+    flex: 10;
 }
