--- a/app/my-orders/my-orders.css
+++ b/app/my-orders/my-orders.css
@@ -41,11 +41,15 @@
     background: transparent;
 }
 
-.creation-date, .event-date, .movie, .cinema {
+.creation-date, .event-date, .movie, .cinema/*, .actions*/ {
+    flex: 3;
+}
+
+.actions {
     flex: 2;
 }
 
-.total, .room, .actions {
+.total, .room/*, .actions*/ {
     flex: 1;
     text-align: center;
 }
@@ -76,4 +80,9 @@
     border: 0;
     background: transparent;
     margin-right: 2px;
+}
+
+.actions ul li {
+    padding-left: 0;
+    padding-right: 0;
 }
